Fix spacing issue across all components. Change max-width on most components

--- a/src/components/main/Features/FeatureCard.module.css
+++ b/src/components/main/Features/FeatureCard.module.css
@@ -1,6 +1,5 @@
 .feature-card {
   width: 100%;
-  max-width: 500px;
   background-color: white;
   padding: 4.8125rem 2rem 2rem;
   text-align: center;
