--- a/src/components/main/Features/Features.module.css
+++ b/src/components/main/Features/Features.module.css
@@ -1,4 +1,7 @@
 .features {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 750px;
 }
 
 .features__h2 {
@@ -8,6 +11,9 @@
   margin-bottom: 1rem;
   font-weight: bold;
   text-align: center;
+  max-width: 450px;
+
+  margin: 0 auto;
 }
 
 .features__p {
@@ -15,5 +21,8 @@
   font-weight: 500;
   letter-spacing: 0.109091px;
   line-height: 28px;
+  color: #9e9aa8;
   text-align: center;
+  max-width: 450px;
+  margin: 1rem auto 0;
 }
