--- a/src/components/main/ShortenedLink.module.css
+++ b/src/components/main/ShortenedLink.module.css
@@ -1,6 +1,7 @@
 .link {
   width: 100%;
-  max-width: 500px;
+  max-width: 750px;
+
   border-radius: 5px;
   background-color: #ffffff;
   padding: 1rem;
